--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/postgresql-42.7.3.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
